gunicorn basic runner added

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -15,6 +15,7 @@ RUN pip install -r requirements.txt
 
 # Copy the content of the local src directory to the working directory
 COPY app.py .
+COPY gunicorn_conf.py .
 
 # Specify the command to run on container start
-CMD [ "python", "./app.py" ]
+CMD [ "gunicorn", "-c", "gunicorn_conf.py", "app:app" ]
