--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,5 +14,5 @@ RUN pip install -r requirements.txt
 COPY app.py .
 COPY gunicorn_conf.py .
 
-# Specify the command to run on container start
-CMD [ "gunicorn", "-c", "gunicorn_conf.py", "app:app" ]
+# Start app with gunicorn with reload for debug
+CMD [ "gunicorn", "--reload", "-c", "gunicorn_conf.py", "app:app" ]
